# student-grade-management

./: .gitignore  CMakeLists.txt  README.md
data/: students.json
src/: hash_table.c  hash_table.h  json_io.c  json_io.h  main.c  student.c  student.h
v1/: README.md
v1/data/: stuinfo.txt
v1/src/: interface.c  interface.h  student.c
v1_c/src/: func.h  main.c  student.h
v2/: Makefile
v2/include/: db.h  utils.h
v2/src/: auth.c  main.c  menu.c  student.c  utils.c
v2_c/: README.md  config.json
v2_c/include/: menu.h  student.h
v2_c/src/: db.c
v3/: docker-compose.yml
v3/backend/: .dockerignore  Dockerfile  Makefile  config.json
v3/database/: Dockerfile  init.sql  my.cnf  start_mysql.sh
v3/frontend/: .env  Makefile  student_frontend
v3_backend_sys/: README  config.json  config.py  database.py  logger.py  request_handler.py  server.py  server_log  thread_pool.py  utils.py
v3_python/: .env
v3_python/database/: init.sql
v3_python/student_management_client/: admin_account_manager.py  cli.py  run.sh  student_manager.py
v3_python/student_management_server/: config.py  db_utils.py  main.py  network.py  stop.sh
v3_python/sys_backend/: config.json  config.py  db_utils.py  logger.py  main.py  network.py  server_log
v4_docker_python/database/: start_mysql.sh
v4_docker_python/student_management_client/: admin_student_manager.py  auth.py  cli.py  logger.py  network.py  student_manager.py
v4_docker_python/student_management_server/: .dockerignore  Dockerfile  Dockerfile_aliy  config.json  init.sql  logger.py  requirements.txt  run.sh
(+15 files in other folders)
